--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,11 @@
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
+    
+    @keyframes pulse {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.7; transform: scale(0.95); }
+    }
 
     /* Auth Screen */
     #auth-screen {
@@ -476,9 +481,10 @@
       border: 1px solid var(--border-color);
       border-left: 4px solid var(--accent-gold);
       border-radius: 8px;
-      padding: 16px;
+      padding: 12px 16px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.6);
       animation: slideIn 0.3s ease;
+      min-width: 300px;
     }
 
     @keyframes slideIn {
@@ -492,33 +498,62 @@
       }
     }
 
-    .notification.success { border-left-color: var(--success); }
-    .notification.warning { border-left-color: var(--warning); }
-    .notification.danger { border-left-color: var(--danger); }
-    .notification.info { border-left-color: var(--info); }
-
-    .notification-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 8px;
+    .notification.success { 
+      border-left-color: var(--success); 
+      background: linear-gradient(90deg, rgba(16, 185, 129, 0.1) 0%, var(--bg-card) 100%);
+    }
+    .notification.warning { 
+      border-left-color: var(--warning);
+      background: linear-gradient(90deg, rgba(245, 158, 11, 0.1) 0%, var(--bg-card) 100%);
+    }
+    .notification.error { 
+      border-left-color: var(--danger);
+      background: linear-gradient(90deg, rgba(239, 68, 68, 0.1) 0%, var(--bg-card) 100%);
+    }
+    .notification.danger { 
+      border-left-color: var(--danger);
+      background: linear-gradient(90deg, rgba(239, 68, 68, 0.1) 0%, var(--bg-card) 100%);
+    }
+    .notification.info { 
+      border-left-color: var(--info);
+      background: linear-gradient(90deg, rgba(59, 130, 246, 0.1) 0%, var(--bg-card) 100%);
     }
 
-    .notification-title {
-      font-weight: 600;
+    .notification-content {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .notification-icon {
+      font-size: 20px;
+      font-weight: bold;
+      flex-shrink: 0;
+    }
+
+    .notification.success .notification-icon { color: var(--success); }
+    .notification.warning .notification-icon { color: var(--warning); }
+    .notification.error .notification-icon { color: var(--danger); }
+    .notification.danger .notification-icon { color: var(--danger); }
+    .notification.info .notification-icon { color: var(--info); }
+
+    .notification-message {
+      flex: 1;
       font-size: 14px;
+      color: var(--text-primary);
     }
 
     .notification-close {
       cursor: pointer;
       color: var(--text-secondary);
-      font-size: 18px;
+      font-size: 20px;
       line-height: 1;
+      flex-shrink: 0;
+      transition: color 0.2s;
     }
 
-    .notification-body {
-      font-size: 13px;
-      color: var(--text-secondary);
+    .notification-close:hover {
+      color: var(--text-primary);
     }
 
     /* Modal */
@@ -752,6 +787,9 @@
           <h4 id="user-name"></h4>
           <p id="user-role"></p>
         </div>
+        <div style="display: flex; gap: 8px; align-items: center; margin-right: 12px;">
+          <div id="os-badge" style="padding: 4px 8px; background: var(--danger); border-radius: 12px; font-size: 11px; font-weight: bold;" title="OS Pendentes">0</div>
+        </div>
         <button class="btn-small" onclick="logout()">Sair</button>
       </div>
     </div>
@@ -841,7 +879,9 @@
         <div id="os-view" class="view">
           <div class="card">
             <div class="card-header">
-              <h3 class="card-title">Ordens de Serviço</h3>
+              <h3 class="card-title">Ordens de Serviço 
+                <span style="color: var(--text-secondary); font-size: 12px; font-weight: normal; margin-left: 8px;">Atalho: Ctrl+K para buscar</span>
+              </h3>
               <div style="display: flex; gap: 12px;">
                 <button class="btn-small" id="btn-os-ativas" onclick="toggleOSView('ativas')">Ativas</button>
                 <button class="btn-small" id="btn-os-historico" onclick="toggleOSView('historico')">Histórico (<span id="historico-count">0</span>)</button>
