Add: design responsivo completo para mobile - menu hamburger, tabelas scroll, modais otimizados

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -735,8 +735,15 @@
       font-weight: 600;
     }
   </style>
+  <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
+  <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+
   <!-- Loading Screen -->
   <div id="loading-screen">
     <div class="loader"></div>
