--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,15 +115,56 @@
     .auth-logo {
       text-align: center;
       margin-bottom: 32px;
+      position: relative;
+    }
+
+    .auth-logo-container {
+      position: relative;
+      display: inline-block;
+    }
+
+    .auth-logo-star {
+      font-size: 80px;
+      color: var(--primary);
+      text-shadow: 
+        0 0 20px rgba(212, 175, 55, 0.8),
+        0 0 40px rgba(212, 175, 55, 0.5),
+        0 0 60px rgba(212, 175, 55, 0.3);
+      animation: starFloat 4s ease-in-out infinite, starPulse 2s ease-in-out infinite;
+      display: block;
+      line-height: 1;
+      filter: drop-shadow(0 5px 15px rgba(212, 175, 55, 0.4));
+    }
+
+    @keyframes starFloat {
+      0%, 100% { transform: translateY(0px) rotate(0deg); }
+      50% { transform: translateY(-12px) rotate(5deg); }
+    }
+
+    @keyframes starPulse {
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.9; transform: scale(1.05); }
     }
 
     .auth-logo h1 {
-      font-size: 32px;
+      font-size: 28px;
       font-weight: 700;
-      background: linear-gradient(135deg, var(--accent-gold) 0%, var(--accent-gold-dim) 100%);
+      background: linear-gradient(135deg, var(--accent-gold) 0%, #FFD700 50%, var(--accent-gold) 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin-top: 12px;
       margin-bottom: 8px;
+      letter-spacing: 4px;
+      text-shadow: 0 0 30px rgba(212, 175, 55, 0.5);
+      animation: shimmer 3s ease-in-out infinite;
+      background-size: 200% auto;
+    }
+
+    @keyframes shimmer {
+      0% { background-position: 0% center; }
+      50% { background-position: 100% center; }
+      100% { background-position: 0% center; }
     }
 
     .auth-logo p {
@@ -502,11 +543,35 @@
     }
 
     .header-logo {
-      font-size: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 18px;
       font-weight: 700;
-      background: linear-gradient(135deg, var(--accent-gold) 0%, var(--accent-gold-dim) 100%);
+    }
+
+    .header-logo-star {
+      font-size: 24px;
+      color: var(--primary);
+      text-shadow: 
+        0 0 15px rgba(212, 175, 55, 0.6),
+        0 0 30px rgba(212, 175, 55, 0.4);
+      animation: headerStarRotate 8s linear infinite;
+      display: inline-block;
+      filter: drop-shadow(0 2px 8px rgba(212, 175, 55, 0.3));
+    }
+
+    @keyframes headerStarRotate {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .header-logo-text {
+      background: linear-gradient(135deg, var(--accent-gold) 0%, #FFD700 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      background-clip: text;
+      letter-spacing: 2px;
     }
 
     .header-user {
@@ -1070,6 +1135,9 @@
   <div id="auth-screen" class="hidden">
     <div class="auth-card">
       <div class="auth-logo">
+        <div class="auth-logo-container">
+          <div class="auth-logo-star">✡</div>
+        </div>
         <h1>ICARUS</h1>
         <p>Sistema de Gestão Premium</p>
       </div>
@@ -1118,7 +1186,10 @@
     <!-- Header -->
     <div class="header">
       <div class="header-left">
-        <div class="header-logo">ICARUS</div>
+        <div class="header-logo">
+          <span class="header-logo-star">✡</span>
+          <span class="header-logo-text">ICARUS</span>
+        </div>
       </div>
       <div class="header-user">
         <div class="user-avatar" id="user-avatar"></div>
