Revert to gold theme

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,17 +8,15 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     
     :root {
-      --bg-primary: #0a0a0f;
-      --bg-secondary: #12121a;
-      --bg-card: #1a1a24;
-      --accent-gold: #c0c0c0;
-      --accent-gold-dim: #a8a8a8;
-      --accent-silver: #e8e8f0;
-      --accent-neon: #f0f0ff;
-      --primary: #c0c0c0;
+      --bg-primary: #0a0a0a;
+      --bg-secondary: #141414;
+      --bg-card: #1a1a1a;
+      --accent-gold: #d4af37;
+      --accent-gold-dim: #b8941f;
+      --primary: #d4af37;
       --text-primary: #ffffff;
-      --text-secondary: #b0b0c0;
-      --border-color: #2a2a35;
+      --text-secondary: #a0a0a0;
+      --border-color: #2a2a2a;
       --success: #10b981;
       --warning: #f59e0b;
       --danger: #ef4444;
@@ -107,11 +105,12 @@
     }
 
     .auth-card {
+      background: linear-gradient(145deg, #1a1a2e 0%, #16213e 100%);\
+      padding: 40px;\n      border-radius: 20px;
       width: 400px;
-      padding: 40px;
-      background: var(--bg-card);
+      max-width: 90%;
+      backdrop-filter: blur(20px);
       border: 1px solid var(--border-color);
-      border-radius: 16px;
       box-shadow: 0 8px 32px rgba(0,0,0,0.5);
     }
 
@@ -128,15 +127,15 @@
 
     .auth-logo-star {
       font-size: 80px;
-      color: #e8e8f0;
+      color: var(--primary);
       text-shadow: 
-        0 0 20px rgba(240, 240, 255, 0.9),
-        0 0 40px rgba(192, 192, 192, 0.6),
-        0 0 60px rgba(240, 240, 255, 0.4);
+        0 0 20px rgba(212, 175, 55, 0.8),
+        0 0 40px rgba(212, 175, 55, 0.5),
+        0 0 60px rgba(212, 175, 55, 0.3);
       animation: starFloat 4s ease-in-out infinite, starPulse 2s ease-in-out infinite;
       display: block;
       line-height: 1;
-      filter: drop-shadow(0 5px 15px rgba(240, 240, 255, 0.5));
+      filter: drop-shadow(0 5px 15px rgba(212, 175, 55, 0.4));
     }
 
     @keyframes starFloat {
@@ -152,14 +151,14 @@
     .auth-logo h1 {
       font-size: 28px;
       font-weight: 700;
-      background: linear-gradient(135deg, #c0c0c0 0%, #f0f0ff 50%, #c0c0c0 100%);
+      background: linear-gradient(135deg, var(--accent-gold) 0%, #FFD700 50%, var(--accent-gold) 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
       margin-top: 12px;
       margin-bottom: 8px;
       letter-spacing: 4px;
-      text-shadow: 0 0 30px rgba(240, 240, 255, 0.6);
+      text-shadow: 0 0 30px rgba(212, 175, 55, 0.5);
       animation: shimmer 3s ease-in-out infinite;
       background-size: 200% auto;
     }
@@ -555,13 +554,13 @@
 
     .header-logo-star {
       font-size: 24px;
-      color: #e8e8f0;
+      color: var(--primary);
       text-shadow: 
-        0 0 15px rgba(240, 240, 255, 0.7),
-        0 0 30px rgba(192, 192, 192, 0.5);
+        0 0 15px rgba(212, 175, 55, 0.6),
+        0 0 30px rgba(212, 175, 55, 0.4);
       animation: headerStarRotate 8s linear infinite;
       display: inline-block;
-      filter: drop-shadow(0 2px 8px rgba(240, 240, 255, 0.4));
+      filter: drop-shadow(0 2px 8px rgba(212, 175, 55, 0.3));
     }
 
     @keyframes headerStarRotate {
@@ -570,7 +569,7 @@
     }
 
     .header-logo-text {
-      background: linear-gradient(135deg, #c0c0c0 0%, #f0f0ff 100%);
+      background: linear-gradient(135deg, var(--accent-gold) 0%, #FFD700 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
