--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,33 +70,85 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background: linear-gradient(180deg, #1a1510 0%, #2a1f15 30%, #3d2a18 60%, #1a1510 100%);
+      background: #0a0a0a;
       position: relative;
       overflow: hidden;
     }
 
-    #auth-screen::before {
+    /* Floating golden lights */
+    #auth-screen::before,
+    #auth-screen::after {
       content: '';
       position: absolute;
-      width: 400px;
-      height: 400px;
-      background: radial-gradient(circle, rgba(212,175,55,0.25) 0%, transparent 60%);
       border-radius: 50%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -60%);
+      filter: blur(80px);
+      animation: floatLight 8s ease-in-out infinite;
+    }
+
+    #auth-screen::before {
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, rgba(212,175,55,0.4) 0%, transparent 70%);
+      top: 10%;
+      left: 20%;
+      animation-delay: 0s;
+    }
+
+    #auth-screen::after {
+      width: 250px;
+      height: 250px;
+      background: radial-gradient(circle, rgba(212,175,55,0.3) 0%, transparent 70%);
+      bottom: 20%;
+      right: 15%;
+      animation-delay: -4s;
+    }
+
+    @keyframes floatLight {
+      0%, 100% { 
+        opacity: 0.4;
+        transform: translate(0, 0) scale(1);
+      }
+      25% {
+        opacity: 0.7;
+        transform: translate(30px, -20px) scale(1.1);
+      }
+      50% { 
+        opacity: 0.5;
+        transform: translate(-20px, 30px) scale(0.9);
+      }
+      75% {
+        opacity: 0.8;
+        transform: translate(20px, 20px) scale(1.05);
+      }
     }
 
     .auth-card {
-      background: rgba(30, 28, 26, 0.95);
+      background: rgba(25, 25, 25, 0.9);
       padding: 40px;
-      border-radius: 24px;
+      border-radius: 20px;
       width: 400px;
       max-width: 90%;
-      border: 1px solid rgba(212, 175, 55, 0.15);
-      box-shadow: 0 8px 32px rgba(0,0,0,0.4);
+      border: 1px solid rgba(212, 175, 55, 0.1);
+      box-shadow: 0 20px 60px rgba(0,0,0,0.5);
       position: relative;
       z-index: 1;
+      backdrop-filter: blur(10px);
+    }
+
+    /* Extra floating lights */
+    .auth-card::before {
+      content: '';
+      position: fixed;
+      width: 200px;
+      height: 200px;
+      background: radial-gradient(circle, rgba(212,175,55,0.25) 0%, transparent 70%);
+      border-radius: 50%;
+      top: 60%;
+      left: 10%;
+      filter: blur(60px);
+      animation: floatLight 10s ease-in-out infinite;
+      animation-delay: -2s;
+      z-index: -1;
     }
 
     .auth-logo {
@@ -111,22 +163,45 @@
     }
 
     .auth-logo-star {
-      font-size: 72px;
+      font-size: 80px;
       color: var(--primary);
       text-shadow: 
-        0 0 30px rgba(212, 175, 55, 0.9),
-        0 0 60px rgba(212, 175, 55, 0.5);
+        0 0 20px rgba(212, 175, 55, 1),
+        0 0 40px rgba(212, 175, 55, 0.8),
+        0 0 60px rgba(212, 175, 55, 0.5),
+        0 0 80px rgba(212, 175, 55, 0.3);
       display: block;
       line-height: 1;
+      animation: starPulse 2.5s ease-in-out infinite;
+    }
+
+    @keyframes starPulse {
+      0%, 100% { 
+        opacity: 1;
+        text-shadow: 
+          0 0 20px rgba(212, 175, 55, 1),
+          0 0 40px rgba(212, 175, 55, 0.8),
+          0 0 60px rgba(212, 175, 55, 0.5),
+          0 0 80px rgba(212, 175, 55, 0.3);
+      }
+      50% { 
+        opacity: 0.85;
+        text-shadow: 
+          0 0 30px rgba(212, 175, 55, 1),
+          0 0 50px rgba(212, 175, 55, 0.9),
+          0 0 80px rgba(212, 175, 55, 0.6),
+          0 0 100px rgba(212, 175, 55, 0.4);
+      }
     }
 
     .auth-logo h1 {
-      font-size: 28px;
-      font-weight: 700;
+      font-size: 32px;
+      font-weight: 300;
       color: var(--primary);
-      margin-top: 16px;
+      margin-top: 20px;
       margin-bottom: 8px;
-      letter-spacing: 8px;
+      letter-spacing: 12px;
+      font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
     }
 
     .auth-logo p {
