--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,7 +123,7 @@
     }
 
     .auth-card {
-      background: rgba(25, 25, 25, 0.9);
+      background: rgba(20, 20, 20, 0.7);
       padding: 40px;
       border-radius: 20px;
       width: 400px;
@@ -132,7 +132,7 @@
       box-shadow: 0 20px 60px rgba(0,0,0,0.5);
       position: relative;
       z-index: 1;
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(15px);
     }
 
     /* Extra floating lights */
@@ -316,8 +316,8 @@
     }
 
     .premium-popup {
-      background: linear-gradient(145deg, #16213e 0%, #0f1419 100%);
-      border: 2px solid var(--primary);
+      background: linear-gradient(145deg, #1a1d24 0%, #0d0f12 100%);
+      border: 2px solid #c0c0c0;
       border-radius: 16px;
       padding: 32px;
       max-width: 420px;
@@ -326,7 +326,7 @@
       width: 90%;
       text-align: center;
       position: relative;
-      box-shadow: 0 25px 70px rgba(0, 0, 0, 0.6), 0 0 60px rgba(212, 175, 55, 0.2), inset 0 1px 0 rgba(255,255,255,0.1);
+      box-shadow: 0 25px 70px rgba(0, 0, 0, 0.6), 0 0 60px rgba(192, 192, 192, 0.15), inset 0 1px 0 rgba(255,255,255,0.1);
       animation: popupSlideIn 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
     }
 
@@ -341,9 +341,9 @@
       right: 16px;
       width: 36px;
       height: 36px;
-      border: 1px solid rgba(212, 175, 55, 0.3);
-      background: rgba(212, 175, 55, 0.1);
-      color: var(--primary);
+      border: 1px solid rgba(192, 192, 192, 0.3);
+      background: rgba(192, 192, 192, 0.1);
+      color: #c0c0c0;
       border-radius: 50%;
       cursor: pointer;
       font-size: 22px;
@@ -354,16 +354,16 @@
     }
 
     .premium-popup-close:hover {
-      background: var(--primary);
+      background: #c0c0c0;
       color: var(--bg-primary);
       transform: rotate(90deg);
-      border-color: var(--primary);
+      border-color: #c0c0c0;
     }
 
     .premium-badge {
       display: inline-block;
       padding: 6px 16px;
-      background: linear-gradient(135deg, var(--primary) 0%, #FFD700 100%);
+      background: linear-gradient(135deg, #c0c0c0 0%, #e8e8e8 100%);
       color: var(--bg-primary);
       border-radius: 20px;
       font-size: 11px;
@@ -376,8 +376,8 @@
     .premium-popup-icon {
       font-size: 52px;
       margin-bottom: 20px;
-      color: var(--primary);
-      text-shadow: 0 0 20px rgba(212, 175, 55, 0.6), 0 0 40px rgba(212, 175, 55, 0.3);
+      color: #c0c0c0;
+      text-shadow: 0 0 20px rgba(192, 192, 192, 0.6), 0 0 40px rgba(192, 192, 192, 0.3);
       animation: iconFloat 3s ease-in-out infinite;
     }
 
@@ -396,7 +396,7 @@
     }
 
     .premium-popup h2 span {
-      background: linear-gradient(135deg, var(--primary) 0%, #FFD700 100%);
+      background: linear-gradient(135deg, #c0c0c0 0%, #e8e8e8 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -422,9 +422,9 @@
       align-items: center;
       gap: 12px;
       padding: 12px 16px;
-      background: linear-gradient(90deg, rgba(212, 175, 55, 0.08) 0%, rgba(212, 175, 55, 0.02) 100%);
+      background: linear-gradient(90deg, rgba(192, 192, 192, 0.08) 0%, rgba(192, 192, 192, 0.02) 100%);
       border-radius: 10px;
-      border-left: 3px solid var(--primary);
+      border-left: 3px solid #c0c0c0;
       transition: all 0.3s ease;
       animation: slideInLeft 0.5s ease-out backwards;
     }
@@ -440,15 +440,15 @@
     }
 
     .premium-feature:hover {
-      background: linear-gradient(90deg, rgba(212, 175, 55, 0.15) 0%, rgba(212, 175, 55, 0.05) 100%);
+      background: linear-gradient(90deg, rgba(192, 192, 192, 0.15) 0%, rgba(192, 192, 192, 0.05) 100%);
       transform: translateX(4px);
     }
 
     .premium-feature-icon {
       font-size: 20px;
       min-width: 24px;
-      color: var(--primary);
-      filter: drop-shadow(0 0 8px rgba(212, 175, 55, 0.4));
+      color: #c0c0c0;
+      filter: drop-shadow(0 0 8px rgba(192, 192, 192, 0.4));
     }
 
     .premium-feature-text {
@@ -495,17 +495,18 @@
       gap: 10px;
       width: 100%;
       padding: 16px 28px;
-      background: linear-gradient(135deg, var(--primary) 0%, #FFD700 100%);
+      background: linear-gradient(135deg, #c0c0c0 0%, #e8e8e8 100%);
       color: var(--bg-primary);
       text-decoration: none;
       border-radius: 12px;
       font-weight: 700;
       font-size: 15px;
       transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-      box-shadow: 0 8px 25px rgba(212,175,55,0.5), 0 0 20px rgba(212,175,55,0.3);
+      box-shadow: 0 8px 25px rgba(192,192,192,0.4), 0 0 20px rgba(192,192,192,0.2);
       margin-bottom: 16px;
       position: relative;
       overflow: hidden;
+      border: none;
     }
 
     .premium-cta-btn::before {
@@ -525,7 +526,7 @@
 
     .premium-cta-btn:hover {
       transform: translateY(-4px) scale(1.02);
-      box-shadow: 0 15px 50px rgba(212,175,55,0.7), 0 0 30px rgba(212,175,55,0.5);
+      box-shadow: 0 15px 50px rgba(192,192,192,0.5), 0 0 30px rgba(192,192,192,0.3);
     }
 
     .premium-cta-btn:active {
