--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,44 +81,44 @@
       content: '';
       position: absolute;
       border-radius: 50%;
-      filter: blur(80px);
+      filter: blur(60px);
       animation: floatLight 8s ease-in-out infinite;
     }
 
     #auth-screen::before {
-      width: 300px;
-      height: 300px;
-      background: radial-gradient(circle, rgba(212,175,55,0.4) 0%, transparent 70%);
-      top: 10%;
-      left: 20%;
+      width: 350px;
+      height: 350px;
+      background: radial-gradient(circle, rgba(212,175,55,0.7) 0%, rgba(212,175,55,0.3) 40%, transparent 70%);
+      top: 5%;
+      left: 15%;
       animation-delay: 0s;
     }
 
     #auth-screen::after {
-      width: 250px;
-      height: 250px;
-      background: radial-gradient(circle, rgba(212,175,55,0.3) 0%, transparent 70%);
-      bottom: 20%;
-      right: 15%;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, rgba(212,175,55,0.6) 0%, rgba(212,175,55,0.25) 40%, transparent 70%);
+      bottom: 15%;
+      right: 10%;
       animation-delay: -4s;
     }
 
     @keyframes floatLight {
       0%, 100% { 
-        opacity: 0.4;
+        opacity: 0.7;
         transform: translate(0, 0) scale(1);
       }
       25% {
-        opacity: 0.7;
-        transform: translate(30px, -20px) scale(1.1);
+        opacity: 1;
+        transform: translate(40px, -30px) scale(1.15);
       }
       50% { 
-        opacity: 0.5;
-        transform: translate(-20px, 30px) scale(0.9);
+        opacity: 0.8;
+        transform: translate(-30px, 40px) scale(0.95);
       }
       75% {
-        opacity: 0.8;
-        transform: translate(20px, 20px) scale(1.05);
+        opacity: 1;
+        transform: translate(30px, 30px) scale(1.1);
       }
     }
 
