--- a/frontend/index.html
+++ b/frontend/index.html
@@ -562,6 +562,37 @@
       display: none;
       height: 100vh;
       flex-direction: column;
+      position: relative;
+      background: var(--bg-primary);
+    }
+
+    /* Subtle ambient lights in app */
+    #app-screen::before {
+      content: '';
+      position: fixed;
+      width: 400px;
+      height: 400px;
+      background: radial-gradient(circle, rgba(212,175,55,0.08) 0%, transparent 70%);
+      border-radius: 50%;
+      top: -100px;
+      right: -100px;
+      pointer-events: none;
+      z-index: 0;
+      filter: blur(60px);
+    }
+
+    #app-screen::after {
+      content: '';
+      position: fixed;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, rgba(212,175,55,0.06) 0%, transparent 70%);
+      border-radius: 50%;
+      bottom: 50px;
+      left: -50px;
+      pointer-events: none;
+      z-index: 0;
+      filter: blur(50px);
     }
 
     /* Header */
@@ -570,8 +601,11 @@
       align-items: center;
       justify-content: space-between;
       padding: 16px 24px;
-      background: var(--bg-secondary);
-      border-bottom: 1px solid var(--border-color);
+      background: linear-gradient(180deg, rgba(20,20,20,0.98) 0%, rgba(15,15,15,0.95) 100%);
+      border-bottom: 1px solid rgba(212, 175, 55, 0.15);
+      position: relative;
+      z-index: 10;
+      backdrop-filter: blur(10px);
     }
 
     .header-left {
@@ -1240,7 +1274,6 @@
         <div class="user-avatar" id="user-avatar"></div>
         <div class="user-info">
           <h4 id="user-name"></h4>
-          <p id="user-role"></p>
         </div>
         <div style="display: flex; gap: 8px; align-items: center; margin-right: 12px;">
           <div id="os-badge" style="padding: 4px 8px; background: var(--danger); border-radius: 12px; font-size: 11px; font-weight: bold;" title="OS Pendentes">0</div>
@@ -1965,24 +1998,24 @@
   <nav class="mobile-bottom-nav" id="mobile-bottom-nav">
     <div class="mobile-bottom-nav-items">
       <div class="mobile-nav-item active" data-view="dashboard" onclick="navigateMobile('dashboard')">
-        <span class="mobile-nav-icon">📊</span>
+        <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"/></svg>
         <span class="mobile-nav-label">Dashboard</span>
       </div>
       <div class="mobile-nav-item" data-view="os" onclick="navigateMobile('os')">
-        <span class="mobile-nav-icon">🔧</span>
+        <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/></svg>
         <span class="mobile-nav-label">OS</span>
       </div>
       <div class="mobile-nav-item" data-view="almoxarifado" onclick="navigateMobile('almoxarifado')">
-        <span class="mobile-nav-icon">📦</span>
+        <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M20 2H4c-1 0-2 .9-2 2v3.01c0 .72.43 1.34 1 1.69V20c0 1.1 1.1 2 2 2h14c.9 0 2-.9 2-2V8.7c.57-.35 1-.97 1-1.69V4c0-1.1-1-2-2-2zm-5 12H9v-2h6v2zm5-7H4V4h16v3z"/></svg>
         <span class="mobile-nav-label">Estoque</span>
       </div>
       <div class="mobile-nav-item" data-view="compras" onclick="navigateMobile('compras')">
-        <span class="mobile-nav-icon">🛒</span>
+        <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"/></svg>
         <span class="mobile-nav-label">Compras</span>
       </div>
-      <div class="mobile-nav-item" data-view="preventivas" onclick="navigateMobile('preventivas')">
-        <span class="mobile-nav-icon">📅</span>
-        <span class="mobile-nav-label">Preventivas</span>
+      <div class="mobile-nav-item" data-view="config" onclick="navigateMobile('config')">
+        <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M19.14 12.94c.04-.31.06-.63.06-.94 0-.31-.02-.63-.06-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg>
+        <span class="mobile-nav-label">Config</span>
       </div>
     </div>
   </nav>
