fix: corrigir data timezone, adicionar dia da semana, otimizar carregamento

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3041,6 +3041,7 @@
                 <thead>
                   <tr>
                     <th>Data</th>
+                    <th>Dia</th>
                     <th>Horário</th>
                     <th>Caixa</th>
                     <th>Leitura (m³)</th>
