Add permissions: only maintenance can edit diesel/generator

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3168,7 +3168,7 @@
           </div>
 
           <!-- Formulário de registro -->
-          <div class="water-form-section">
+          <div id="diesel-form-section" class="water-form-section">
             <h3 class="water-form-title">Registrar Movimentação</h3>
             <div class="water-form-grid">
               <div class="form-group">
@@ -3306,7 +3306,7 @@
           </div>
 
           <!-- Formulário de registro -->
-          <div class="water-form-section">
+          <div id="generator-form-section" class="water-form-section">
             <h3 class="water-form-title">Registrar Evento do Gerador</h3>
             <div class="water-form-grid">
               <div class="form-group">
