--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3332,11 +3332,14 @@
             </div>
           </div>
 
+          <!-- Alertas de Estoque -->
+          <div id="diesel-alert-container"></div>
+
           <!-- Filtros de Período -->
           <div class="water-filters">
-            <button class="water-filter-btn active" id="diesel-filter-today" onclick="setDieselPeriod('today')">Hoje</button>
+            <button class="water-filter-btn" id="diesel-filter-today" onclick="setDieselPeriod('today')">Hoje</button>
             <button class="water-filter-btn" id="diesel-filter-week" onclick="setDieselPeriod('week')">Semana</button>
-            <button class="water-filter-btn" id="diesel-filter-month" onclick="setDieselPeriod('month')">Mês</button>
+            <button class="water-filter-btn active" id="diesel-filter-month" onclick="setDieselPeriod('month')">Mês</button>
           </div>
 
           <!-- Cards de Resumo -->
