fix: corrige canvas diesel, mostra pendente para 16h, corrige calculo 24h

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3424,7 +3424,9 @@
                 <span class="legend-item saida"><span class="legend-dot"></span> Saída</span>
               </div>
             </div>
-            <div class="water-main-chart" id="diesel-consumption-chart"></div>
+            <div class="water-main-chart">
+              <canvas id="diesel-consumption-chart"></canvas>
+            </div>
           </div>
 
           <!-- Seção de Entrada de Dados -->
